bk_ida/gccida/c2/dbxout_symbol
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dbxout_symbol/src/dbxout.c:2308:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *initial; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dbxout_symbol/src/dbxout.c:2312:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dbxout_symbol/src/dbxout.c:2319:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dbxout_symbol/src/dbxout.c:2320:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dbxout_symbol/src/dbxout.c:2325:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dbxout_symbol/src/dbxout.c:2409:20: error: expected expression
v26 = ( tree_node *)*( &global_trees + 27); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dbxout_symbol/src/dbxout.c:2409:9: error: use of undeclared identifier 'tree_node'
v26 = ( tree_node *)*( &global_trees + 27); 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dbxout_symbol/src/dbxout.c:2434:20: error: use of undeclared identifier 'off_6474F4'
fprintf( asmfile, &off_6474F4[1], ( unsigned int)current_sym_value); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dbxout_symbol/src/dbxout.c:2472:20: error: use of undeclared identifier 'off_6474F4'
fprintf( asmfile, &off_6474F4[1], ( unsigned int)current_sym_value); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dbxout_symbol/src/dbxout.c:2525:20: error: use of undeclared identifier 'off_6474F4'
fprintf( asmfile, &off_6474F4[1], ( unsigned int)current_sym_value); 
                   ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dbxout_symbol/src/obj/dbxout.o] Error 1
